[GUI] resolved issue on some advanced card